[ZAP-193] Testes unitarios (#194)
* feat: start unity tests on chats

* feat: crreat unity tests for routines

* feat: unity testes for sessions

* refact: refactor ChatServiceTest

* refact: refactor MessageServiceTest

* refact: refactor NotificationServiceTest

* refact: refactor PlanServiceTest

* refact: refactor BroadcastListServiceTest